--- a/public/tipografika.html
+++ b/public/tipografika.html
@@ -84,7 +84,7 @@
 				</div>
 			</header>
 			<main>
-				<section style="padding-top: 30px;">
+				<section style="padding-top: 30px; padding-bottom: 30px;">
 					<div class="container">
 						<div class="row">
 							<div class="col-12">
@@ -164,6 +164,28 @@
 								<br>
 								<div class="bg-blue" style="padding: 20px;">
 									По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
+								</div>
+
+								<br>
+								<br>
+								<div class="h2">Раскрывающийся блок</div>
+								<div class="unwrap js-unwrap">
+									<div class="unwrap__head js-unwrap-head">
+										<div class="unwrap__name">Стандарт</div>
+
+										<div class="unwrap__switch"><span class="unwrap__switch-text js-unwrap-switch" data-switch="Свернуть">Подробнее</span></div>
+									</div>
+
+									<div class="unwrap__content js-unwrap-content">
+										<p>Программа «Минус лишний вес»</p>
+
+										<ul>
+											<li>атопический дерматит (нейродермит)</li>
+											<li>псориаз</li>
+											<li>угревая сыпь</li>
+											<li>различные аллергодерматозы</li>
+										</ul>
+									</div>
 								</div>
 							</div>
 						</div>
